[package]
name = "shelf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["query"] }
clap = { version = "4.5.29", features = ["derive"] }
indexmap = { version = "2.7.1", features = ["serde"] }
jiff = { version = "0.2.0", features = ["serde"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
